--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.stdata/
+.stdatacrawler/
 
 # Created by https://www.gitignore.io/api/python,pycharm+all,intellij+all
 # Edit at https://www.gitignore.io/?templates=python,pycharm+all,intellij+all
